testing/framework/resources/Advanced/Failing/mondrian/query5955.q
select * from (select employee_manager.management_role as c0, store.store_type as c1 from employee as employee, employee as employee_manager, inventory_fact_1997 as inventory, store as store where employee.supervisor_id = employee_manager.employee_id and inventory.product_id = employee.employee_id and inventory.warehouse_id = store.store_id group by employee_manager.management_role, store.store_type union select employee_manager_1.management_role as c0, store_1.store_type as c1 from employee as employee_1, employee as employee_manager_1, inventory_fact_1997 as inventory, store as store_1 where employee_1.supervisor_id = employee_manager_1.employee_id and inventory.time_id = employee_1.employee_id and inventory.store_id = store_1.store_id group by employee_manager_1.management_role, store_1.store_type) as unionQuery order by 1 ASC NULLS LAST, 2 ASC NULLS LAST;
